{
  "version": 4,
  "terraform_version": "0.12.23",
  "serial": 75,
  "lineage": "87d28ec4-d49b-04b8-d50c-6d806e80c72c",
  "resources": [
    {
      "module": "module.default_vpc",
      "mode": "data",
      "type": "aws_subnet",
      "name": "default",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:415352219645:subnet/subnet-0de0f851",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.31.32.0/20",
            "default_for_az": true,
            "id": "subnet-0de0f851",
            "map_public_ip_on_launch": true,
            "owner_id": "415352219645",
            "state": "available",
            "vpc_id": "vpc-8d5378f7"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:415352219645:subnet/subnet-8419c88a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "172.31.48.0/20",
            "default_for_az": true,
            "id": "subnet-8419c88a",
            "map_public_ip_on_launch": true,
            "owner_id": "415352219645",
            "state": "available",
            "vpc_id": "vpc-8d5378f7"
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:415352219645:subnet/subnet-8d1c03ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.31.0.0/20",
            "default_for_az": true,
            "id": "subnet-8d1c03ea",
            "map_public_ip_on_launch": true,
            "owner_id": "415352219645",
            "state": "available",
            "vpc_id": "vpc-8d5378f7"
          }
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:415352219645:subnet/subnet-93b9a3bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.31.80.0/20",
            "default_for_az": true,
            "id": "subnet-93b9a3bd",
            "map_public_ip_on_launch": true,
            "owner_id": "415352219645",
            "state": "available",
            "vpc_id": "vpc-8d5378f7"
          }
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:415352219645:subnet/subnet-aa8ead94",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "172.31.64.0/20",
            "default_for_az": true,
            "id": "subnet-aa8ead94",
            "map_public_ip_on_launch": true,
            "owner_id": "415352219645",
            "state": "available",
            "vpc_id": "vpc-8d5378f7"
          }
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:415352219645:subnet/subnet-b550fff8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.31.16.0/20",
            "default_for_az": true,
            "id": "subnet-b550fff8",
            "map_public_ip_on_launch": true,
            "owner_id": "415352219645",
            "state": "available",
            "vpc_id": "vpc-8d5378f7"
          }
        }
      ]
    },
    {
      "module": "module.default_vpc",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:415352219645:vpc/vpc-8d5378f7",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-1b767277",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-7182560b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-8d5378f7",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-96c472e8",
            "owner_id": "415352219645",
            "state": "available"
          }
        }
      ]
    },
    {
      "module": "module.default_vpc",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "this",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:415352219645:vpc/vpc-8d5378f7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-7dee7c00",
            "default_route_table_id": "rtb-96c472e8",
            "default_security_group_id": "sg-e69bd7ce",
            "dhcp_options_id": "dopt-7182560b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-8d5378f7",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-96c472e8",
            "owner_id": "415352219645"
          }
        }
      ]
    },
    {
      "module": "module.defaults",
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0f92ef4885c4d0078",
            "domain": "vpc",
            "id": "eipalloc-0ab6bcf8f1b278ca2",
            "instance": "i-042bd885ad8649006",
            "network_interface": "eni-0e49375be9b8f48cf",
            "private_dns": "ip-172-31-27-178.ec2.internal",
            "private_ip": "172.31.27.178",
            "public_dns": "ec2-34-202-142-70.compute-1.amazonaws.com",
            "public_ip": "34.202.142.70",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.defaults",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05801d0a3c8e4c443",
            "arn": "arn:aws:ec2:us-east-1:415352219645:instance/i-042bd885ad8649006",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-042bd885ad8649006",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "terraform-20200604072643801200000001",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e49375be9b8f48cf",
            "private_dns": "ip-172-31-27-178.ec2.internal",
            "private_ip": "172.31.27.178",
            "public_dns": "ec2-34-202-142-70.compute-1.amazonaws.com",
            "public_ip": "34.202.142.70",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0e9173fe231e44dc6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "terraform-20200604072647773600000005"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-b550fff8",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b215998fcec09178"
            ]
          },
          "dependencies": [
            "aws_security_group.this",
            "module.default_vpc.aws_default_vpc.this",
            "module.defaults.aws_key_pair.this"
          ]
        }
      ]
    },
    {
      "module": "module.defaults",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:415352219645:security-group/sg-020bd9f2f656ef98d",
            "description": "Security group for airflow superset vm",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-020bd9f2f656ef98d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 5432
              }
            ],
            "name": "airflow",
            "name_prefix": null,
            "owner_id": "415352219645",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-8d5378f7"
          },
          "dependencies": [
            "module.default_vpc.aws_default_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:415352219645:security-group/sg-0b215998fcec09178",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b215998fcec09178",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9100,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9100
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9113,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9113
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9115,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9115
              }
            ],
            "name": "terraform-20200604072647773600000005",
            "name_prefix": null,
            "owner_id": "415352219645",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-8d5378f7"
          },
          "dependencies": [
            "module.default_vpc.aws_default_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.defaults",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rds_pg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 5432,
            "id": "sgrule-1031394441",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-020bd9f2f656ef98d",
            "self": true,
            "source_security_group_id": "sg-020bd9f2f656ef98d",
            "to_port": 5432,
            "type": "ingress"
          },
          "dependencies": [
            "module.default_vpc.aws_default_vpc.this",
            "module.defaults.aws_security_group.rds"
          ]
        }
      ]
    },
    {
      "module": "module.defaults",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rds_public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 5432,
            "id": "sgrule-527037407",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-020bd9f2f656ef98d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "dependencies": [
            "module.default_vpc.aws_default_vpc.this",
            "module.defaults.aws_security_group.rds"
          ]
        }
      ]
    }
  ]
}